Try to fix layout issues with the modal library

--- a/public/app.css
+++ b/public/app.css
@@ -12,6 +12,7 @@ body {
 	overflow: hidden;
 }
 
+#js-modal-page,
 .outer-container {
 	display: flex;
 	height: 100%;
